--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,186 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
+/* Color Palette Used */
+:root {
+    --tyrian-purple: #571b43ff;
+    --coral-pink: #f88379ff;
+    --satin-sheen-gold: #cca124ff;
+    --cosmic-latte: #fff8e7ff;
+    --wine: #722f37ff;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: ivory;
+    background-color: var(--cosmic-latte);
+    display: flex;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
+}
+
+
+/* Header Area */
+
+.logo {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 30px;
+    bottom: 50px;
+    left: 160px;
+    z-index: -10;
+}
+
+.header {
+    width: 100%;
+    height: 140px;
+    left: 0px;
+    top: 0px;
+    margin-top: 0px;
+    background-color: var(--satin-sheen-gold);
+    z-index: -100;
+}
+
+/* nav {
+    position: absolute;
+    width: 800px;
+    height: 50px;
+    left: 664px;
+    top: 40px;
+    bottom: 40px;
+    z-index: -10;
+
+    background: var(--cosmic-latte);
+    border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: regular;
+    font-size: 20px;
+} */
+
+.nav-bar {
+    position: absolute;
+    right: 280px;
+    top: 40px;
+    width: 800px;
+    height: 50px;
+    background-color: var(--cosmic-latte);
+    overflow: auto;
+    border-radius: 30px;
+    z-index: 10;
+}
+
+/* Spacing the options EQUALLY in NAV-BAR */
+.nav-bar a {
+    float: left;
+    padding: 12px;
+    color: var(--tyrian-purple);
+    font-size: 20px;
+    width: 20%;   /* Equal spacing done here */
+    text-align: center;
+    text-decoration: none;
+}
+
+.nav-bar a.active {
+    height: 50px;
+    color: var(--cosmic-latte);
+    background-color: var(--tyrian-purple);
+    border-radius: 30px;
+}
+
+.nav-bar a:hover {
+    height: 50px;
+    color: var(--cosmic-latte);
+    background-color: var(--coral-pink);
+    border-radius: 30px;
+}
+
+.nav-bar a:active {
+    color: var(--cosmic-latte);
+    background-color: var(--tyrian-purple);
+    border-radius: 30px;
+}
+
+.mag-glass {
+    position: absolute;
+    top: 45px;
+    right: 190px;
+    width: 40px;
+    height: 40px;
+    z-index: 10;
+}
+
+.mag-glass:hover {
+    color: var(--coral-pink);    /* ISSUE: This hover is not working. Please fix it. */
+}
+
+
+.cart {
+    position: absolute;
+    top: 45px;
+    right: 90px;
+    width: 40px;
+    height: 40px;
+}
+
+
+
+
+/* Hero Area */
+.hero {
+    width: 100%;
+    height: 600px;
+    top: 140px;
+    background-color: var(--cosmic-latte);
+}
+
+.left-arrow {
+    position: absolute;
+    top: 400px;
+    left: 50px;
+}
+
+.right-arrow {
+    position: absolute;
+    top: 400px;
+    right: 50px;
+}
+
+
+/* Hot Products Area */
+.hot-products {
+    width: 100%;
+    height: 850px;
+    top: 740px;
+    background: rgba(204, 161, 36, 0.6);
+}
+
+.service-section {
+    width: 100%;
+    height: 850px;
+    top: 1590px;
+    background-color: var(--cosmic-latte);
+}
+
+.bottom-section {
+    width: 100%;
+    top: 2440px;
+    height: 900px;
+    background-color: var(--wine);
+}
+
+footer {
+    width: 100%;
+    height: 100px;
+    background-color: var(--tyrian-purple);
+}
+
+footer p {
+    color: var(--cosmic-latte);
+    font-size: 16px;
+    text-align: center;
 }
