--- a/Front End 1.0/Homepage.css
+++ b/Front End 1.0/Homepage.css
@@ -1,13 +1,76 @@
+
+header{
+    display: flex;
+    background-color: rgba(198, 148, 0, 0.76);
+}
+nav{
+    margin-left: 52%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+nav ul{
+    border-radius: 15px;
+    padding: 0px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
+    
+}
+nav ul li{
+    border-radius: 15px;
+    justify-content: space-between;
+    padding: 5px;
+    
+}
+nav ul li a{
+    color: darkred;
+    text-decoration: none;
+}
+nav ul li a:hover{
+    color: white;
+}
+nav ul li:hover{
+    background-color: rgba(114, 1, 30, 0.808);
+    border-radius: 15px;
+    justify-content: space-between;
+    
+}
+
+.icons{
+    padding-top: 5px;
+    margin-right: 65px;
+}
+.material-symbols-outlined.icons{
+    width: max-content;
+}
+/*.material-symbols-outlined:first-child{
+    padding-top: 8px;
+    margin-left: 5px;
+    margin-right: 65px; 
+}
+.material-symbols-outlined:not(:first-child){
+    margin-right: 66px;    
+}*/
+
+
+
+
 .Nav_links
 {
+    background-color: white;
     align-items: center;
-    align-content: end;
-
+    display: flex;
+    list-style-type:none;
+    padding: 5px;
 }
 
 .Dog_Logo{
     margin-left: 70px;
-    margin-top: 35px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     height: 100px;
     border-radius: 100%;
+    /* float: left; */
 }
